updated classes to make invitation card more dynamic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
       </form>
     </section>
-    <section id="invitation" class="formal">
+    <section class="invitation">
+      <div id="invitationCard" class="formal">
         <div> </div>
         <div id="initialsInvite"> </div>
         <div>You are cordially invited to the wedding of</div>
@@ -58,6 +59,7 @@
         <div id="weddingDateInvite" class="date" ></div>
         <div id="addressInvite" class="address" ></div>
         <div> </div>
+      </div>
     </section>
   </div>
   <footer>
