fixed radio button stacking

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
       <form>
         <div>
           <div><label for="bride">Bride's First Name:</label></div>
-          <input type="text" id="bride" autocomplete='given-name'/>
+          <input class="textInput" type="text" id="bride" autocomplete='given-name'/>
         </div>
         <div>
           <div><label for="groom">Groom's First Name:</label></div>
-          <input type="text" id="groom" autocomplete='given-name'/>
+          <input class="textInput" type="text" id="groom" autocomplete='given-name'/>
         </div>
         <div>
           <div><label for="lastName">Last Name:</label></div>
-          <input type="text" id="lastName" autocomplete='family-name'/>
+          <input class="textInput" type="text" id="lastName" autocomplete='family-name'/>
         </div>
         <div>
           <div><label for="weddingDate">Date:</label></div>
-          <input type="datetime" id="weddingDate"/>
+          <input class="textInput" type="datetime" id="weddingDate"/>
         </div>
         <div>
           <div><label for="address">Wedding Location:</label></div>
-          <input type="text" id="address" autocomplete='address-line1'/>
+          <input class="textInput" type="text" id="address" autocomplete='address-line1'/>
         </div>
 
       </form>
